--- a/.env.dev
+++ b/.env.dev
@@ -16,5 +16,5 @@ DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=admin
 DJANGO_SUPERUSER_EMAIL=admin@gmail.com
 
-CELERY_BROKER_URL= "redis://redis:6379/0"
-CELERY_RESULT_BACKEND= "redis://redis:6379/0"
+CELERY_BROKER_URL= "redis://redis:6379"
+CELERY_RESULT_BACKEND= "django-db"
