--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ Django==4.2.3
 sqlparse==0.4.4
 tzdata==2023.3
 celery[redis]
+psycopg2
+psycopg2-binary
+httpie
+django-cors-headers
+pillow
+django-import-export
+django-celery-results
