--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -21,7 +21,7 @@ server {
 
     location /static/ {
         autoindex on;
-        alias /usr/src/app/backend/static/;
+        alias /home/app/static/;
     }
         
 }
