--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: '3.7'
 
 services:
+  app:
+    container_name: server
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: ./docker/backend/Dockerfile
+    entrypoint: [ "/home/app/docker/backend/server-entrypoint.sh" ]
+    volumes:
+      - static_volume:/home/app/static
+      - media_volume:/home/app/media
+    expose:
+      - 8000
+    env_file:
+      - .env
+
   nginx:
     container_name: nginx
     restart: always
@@ -9,9 +24,9 @@ services:
       - 80:80
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/home/app/static      
+      - static_volume:/home/app/static
       - media_volume:/home/app/media
- 
+
   redis:
     container_name: redis
     restart: unless-stopped
@@ -26,7 +41,7 @@ services:
       dockerfile: ./docker/backend/Dockerfile
     entrypoint: [ "/home/app/docker/backend/worker-entrypoint.sh" ]
     volumes:
-      - static_volume:/home/app/static      
+      - static_volume:/home/app/static
       - media_volume:/home/app/media
     env_file:
       - .env
@@ -41,7 +56,7 @@ services:
       dockerfile: ./docker/backend/Dockerfile
     entrypoint: [ "/home/app/docker/backend/beat-entrypoint.sh" ]
     volumes:
-      - static_volume:/home/app/static      
+      - static_volume:/home/app/static
       - media_volume:/home/app/media
     env_file:
       - .env
@@ -58,7 +73,7 @@ services:
       - app
     volumes:
       - ./docker/supervisor/celery.conf:/etc/supervisor/conf.d/celery.conf
-      - static_volume:/home/app/static      
+      - static_volume:/home/app/static
       - media_volume:/home/app/media
 
 volumes:
