feat: email variables

--- a/.env.dev
+++ b/.env.dev
@@ -18,3 +18,10 @@ DJANGO_SUPERUSER_EMAIL=admin@gmail.com
 
 CELERY_BROKER_URL= "redis://redis:6379"
 CELERY_RESULT_BACKEND= "django-db"
+
+EMAIL_HOST = ""
+EMAIL_USE_TLS = 0
+EMAIL_PORT = 000
+EMAIL_HOST_USER = ""
+EMAIL_HOST_PASSWORD = ""
+EMAIL_RECIPIENT=""
