chore: daemon config

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -19,11 +19,11 @@ serverurl=unix:///dev/shm/supervisor.sock
 
 [program: celery-worker]
 command=python3 -m celery -A core worker -l info
-directory=/home/app
+directory=/home/app/backend
 user=root
 numprocs=1
-stdout_logfile=/home/app/log/worker.log
-stderr_logfile=/home/app/log/worker.err.log
+stdout_logfile=/home/app/backend/log/worker.log
+stderr_logfile=/home/app/backend/log/worker.err.log
 autostart=true
 autorestart=true
 startsecs=10
@@ -38,11 +38,11 @@ priority=998
 
 [program: celery-beat]
 command=python3 -m celery -A core beat -l info
-directory=/home/app
+directory=/home/app/backend
 user=root
 numprocs=1
-stdout_logfile=/home/app/log/beat.log
-stderr_logfile=/home/app/log/beat.err.log
+stdout_logfile=/home/app/backend/log/beat.log
+stderr_logfile=/home/app/backend/log/beat.err.log
 autostart=true
 autorestart=true
 startsecs=10
