--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,11 +14,11 @@ server {
     }
 
     location /static/ {
-        alias /home/app/backend/static/;
+        alias /home/app/static/;
     }
 
     location /media/ {
-        alias /home/app/backend/media/;
+        alias /home/app/media/;
     }
 
 }
