--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref==3.7.2
-Django==4.2.3
-sqlparse==0.4.4
+asgiref==3.8.1
+Django==5.2
+sqlparse==0.5.3
 tzdata==2023.3
 celery[redis]
 psycopg2-binary
@@ -12,3 +12,6 @@ django-import-export
 django-celery-results
 django-environ
 django-admin-interface
+django-simple-history
+django-filter==23.5
+django-safedelete
