chore: mise à jour de la configuration de supervisord pour les workers Celery et ajout d'un script de redirection des logs

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -4,8 +4,12 @@ chmod=0700
 
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisor/supervisord.log
+user=root
 childlogdir=/var/log/supervisor
+logfile=/var/log/supervisor/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=10
+loglevel=info
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
@@ -17,17 +21,22 @@ serverurl=unix:///dev/shm/supervisor.sock
 ;  celery worker config
 ; ==========================================
 
-[program: celery-worker]
+[program:celery-worker-eldorado]
 command=python3 -m celery -A core worker -l info
 directory=/home/app/backend
 user=root
 numprocs=1
-stdout_logfile=/home/app/backend/log/worker.log
-stderr_logfile=/home/app/backend/log/worker.err.log
+stdout_logfile=/var/log/supervisor/celery-worker.log
+stderr_logfile=/var/log/supervisor/celery-worker-error.log
+stdout_logfile_maxbytes=10MB
+stderr_logfile_maxbytes=10MB
+stdout_events_enabled=true
+stderr_events_enabled=true
 autostart=true
 autorestart=true
 startsecs=10
-stopwaitsecs = 600
+startretries=3
+stopwaitsecs=600
 killasgroup=true
 priority=998
 ; priority 998 executes first and then 999
@@ -36,16 +45,37 @@ priority=998
 ; celery beat config
 ; ========================================
 
-[program: celery-beat]
+[program:celery-beat-eldorado]
 command=python3 -m celery -A core beat -l info
 directory=/home/app/backend
 user=root
 numprocs=1
-stdout_logfile=/home/app/backend/log/beat.log
-stderr_logfile=/home/app/backend/log/beat.err.log
+stdout_logfile=/var/log/supervisor/celery-beat.log
+stderr_logfile=/var/log/supervisor/celery-beat-error.log
+stdout_logfile_maxbytes=10MB
+stderr_logfile_maxbytes=10MB
+stdout_events_enabled=true
+stderr_events_enabled=true
 autostart=true
 autorestart=true
 startsecs=10
-stopwaitsecs = 600
+startretries=3
+stopwaitsecs=600
 killasgroup=true
 priority=999
+
+; ========================================
+; Log forwarder to stdout/stderr for Docker logs
+; ========================================
+
+[program:celery-logs-forwarder]
+command=/home/app/docker/backend/log-forwarder.sh
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autostart=true
+autorestart=true
+startsecs=5
+startretries=3
+priority=1000
