chore: ajouter un fichier .env.dev pour la configuration de l'environnement et mettre à jour nginx.conf pour les chemins statiques

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -13,12 +13,11 @@ server {
         proxy_redirect off;
     }
 
-    location /static/ {
-        alias /home/app/static/;
+    location /appname/static/ {
+        alias /home/app/backend/static/;
     }
 
-    location /media/ {
-        alias /home/app/media/;
+    location /appname/media/ {
+        alias /home/app/backend/media/;
     }
-
 }
