--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,178 @@
-asgiref==3.8.1
-Django==5.2
+amqp==5.3.1
+arabic-reshaper==3.0.0
+asgiref==3.9.1
+asn1crypto==1.5.1
+billiard==4.2.1
+celery==5.5.3
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cron_descriptor==2.0.5
+cryptography==45.0.6
+cssbeautifier==1.15.4
+cssselect2==0.8.0
+defusedxml==0.7.1
+diff-match-patch==20241021
+Django==5.2.5
+django-admin-interface==0.30.1
+django-auth-ldap==5.2.0
+django-celery-beat==2.8.1
+django-colorfield==0.14.0
+django-cors-headers==4.7.0
+django-environ==0.12.0
+django-filter==25.1
+django-import-export==4.3.9
+django-safedelete==1.4.1
+django-simple-history==3.10.1
+django-timezone-field==7.1
+django_celery_results==2.6.0
+djlint==1.36.4
+EditorConfig==0.17.1
+html5lib==1.1
+httpie==3.2.4
+idna==3.10
+jsbeautifier==1.15.4
+json5==0.12.1
+kombu==5.5.4
+lxml==6.0.1
+markdown-it-py==4.0.0
+mdurl==0.1.2
+multidict==6.6.4
+oscrypto==1.3.0
+packaging==25.0
+pathspec==0.12.1
+pillow==11.3.0
+prompt_toolkit==3.0.51
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+Pygments==2.19.2
+pyHanko==0.30.0
+pyhanko-certvalidator==0.28.0
+pypdf==6.0.0
+PySocks==1.7.1
+python-bidi==0.6.6
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
+python-ldap==3.4.4
+python-slugify==8.0.4
+PyYAML==6.0.2
+redis==5.2.1
+regex==2025.7.34
+reportlab==4.4.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.1.0
+setuptools==80.9.0
+six==1.17.0
 sqlparse==0.5.3
-tzdata==2023.3
-celery[redis]
-psycopg2-binary
-psycopg2
-httpie
-pillow
-
-django-cors-headers
-django-import-export
-django-celery-results
-django-environ
-django-admin-interface
-django-simple-history
-django-filter==23.5
-django-safedelete
-django-axes==6.0.1
-django-session-security==2.6.7
-django-maintenance-mode
+svglib==1.5.1
+tablib==3.8.0
+text-unidecode==1.3
+tinycss2==1.4.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+xhtml2pdf==0.2.17
+amqp==5.3.1
+arabic-reshaper==3.0.0
+asgiref==3.9.1
+asn1crypto==1.5.1
+billiard==4.2.1
+celery==5.5.3
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cron_descriptor==2.0.5
+cryptography==45.0.6
+cssbeautifier==1.15.4
+cssselect2==0.8.0
+defusedxml==0.7.1
+diff-match-patch==20241021
+Django==5.2.5
+django-admin-interface==0.30.1
+django-auth-ldap==5.2.0
+django-celery-beat==2.8.1
+django-colorfield==0.14.0
+django-cors-headers==4.7.0
+django-environ==0.12.0
+django-filter==25.1
+django-import-export==4.3.9
+django-safedelete==1.4.1
+django-simple-history==3.10.1
+django-timezone-field==7.1
+django_celery_results==2.6.0
+djlint==1.36.4
+EditorConfig==0.17.1
+html5lib==1.1
+httpie==3.2.4
+idna==3.10
+jsbeautifier==1.15.4
+json5==0.12.1
+kombu==5.5.4
+lxml==6.0.1
+markdown-it-py==4.0.0
+mdurl==0.1.2
+multidict==6.6.4
+oscrypto==1.3.0
+packaging==25.0
+pathspec==0.12.1
+pillow==11.3.0
+prompt_toolkit==3.0.51
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+Pygments==2.19.2
+pyHanko==0.30.0
+pyhanko-certvalidator==0.28.0
+pypdf==6.0.0
+PySocks==1.7.1
+python-bidi==0.6.6
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
+python-ldap==3.4.4
+python-slugify==8.0.4
+PyYAML==6.0.2
+redis==5.2.1
+regex==2025.7.34
+reportlab==4.4.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.1.0
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.3
+svglib==1.5.1
+tablib==3.8.0
+text-unidecode==1.3
+tinycss2==1.4.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+xhtml2pdf==0.2.17
