fix: renommer les programmes celery-worker et celery-beat dans supervisord.conf

--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -21,7 +21,7 @@ serverurl=unix:///dev/shm/supervisor.sock
 ;  celery worker config
 ; ==========================================
 
-[program:celery-worker-eldorado]
+[program:celery-worker]
 command=python3 -m celery -A core worker -l info
 directory=/home/app/backend
 user=root
@@ -45,7 +45,7 @@ priority=998
 ; celery beat config
 ; ========================================
 
-[program:celery-beat-eldorado]
+[program:celery-beat]
 command=python3 -m celery -A core beat -l info
 directory=/home/app/backend
 user=root
